Create employees controller, methods and all for this.

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -17,7 +17,9 @@
       <li><a href="/admin/units">Ед. измерения</a></li>
       <li><a href="/admin/products">Продукты</a></li>
       <li><a href="/admin/stock">Склад</a></li>
+      <form th:action="@{/logout}" method="post">
         <input type="submit" value="Выйти из аккаунта"/>
+      </form>
     </ul>
   </div>
 </header>
